--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,7 +1,7 @@
 <div class="subjects index">
   <h2>Subjects</h2>
 
-  <%= link_to("Add New Subject", '#', :class => 'action new') %>
+  <%= link_to("Add New Subject", {:action => 'new'}, :class => 'action new') %>
 
   <table class="listing" summary="Subject list">
     <tr class="header">
@@ -13,7 +13,7 @@
     </tr>
     <% @subjects.each do |subject| %>
       <tr>
-        <td><%= subject.position %></td>
+        <td><%= subject.id %></td>
         <td><%= subject.name %></td>
         <td class="center"><%= subject.visible ? 'Yes' : 'No' %></td>
         <td class="center"><%= subject.pages.size %></td>
